<resources>
    <string name="app_name">Punto de Venta</string>
    <string name="xml_tracking_id">123123123</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Registrarse</string>
    <string name="login">Login</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="content_description">contentDescription</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="whatsapp_hint">Enviar recibo por WhatsApp</string>
    <string name="print_hint">Imprimir recibo</string>
    <string name="password_hint">Contraseña</string>
    <string name="connect_with">Conectarse con</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all">Todos</string>
    <string name="favorites">Favoritos</string>
    <string name="all_categories">Todas las Categorias</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="charge">"Cobro $0.00</string>
    <string name="charge_wildcard">"Cobro ${price}</string>
    <string name="search">Buscar</string>
    <string name="add">Agregar</string>
    <string name="select_customer">Seleccionar Cliente</string>
    <string name="add_customer">Agregar Nuevo Cliente</string>
    <string name="search_customer_hint">Nombre, Correo Electrónico, Cédula</string>
    <string name="search_category_hint">Buscar Categoria</string>
    <string name="search_product_hint">Buscar productos</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="social_id">Cédula</string>
    <string name="card">Tarjeta ADESS</string>
    <string name="sales">Ventas</string>
    <string name="transactions">Transacciones</string>
    <string name="items">Articulos</string>
    <string name="reports">Reportes</string>
    <string name="settings">Configuraciones</string>
    <string name="support">Soporte</string>
    <string name="product">Producto</string>
    <string name="products">Productos</string>
    <string name="categories">Categorias</string>
    <string name="change_picture">Cambiar Imagen</string>
    <string name="select_category">Seleccionar Categoría</string>
    <string name="create_product">Agregar Producto</string>
    <string name="printer_setting">Configración de Impresora</string>
    <string name="create_printer">Agregar Impresora</string>
    <string name="delete_printer">Borrar Impresora</string>
    <string name="test_printer">Probar Impresora</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="soldBy">Vendido como:</string>
    <string name="unity">Unidad</string>
    <string name="weight">Libra</string>
    <string name="sku">SKU</string>
    <string name="quantity">Cantidad</string>
    <string name="barcode">Código de Barra</string>
    <string name="cash">Efectivo</string>
    <string name="cash_method">Método de Pago: Efectivo</string>
    <string name="cc_method">Método de Pago: Tarjeta de Crédito</string>
    <string name="credit_card">Tarjeta de Crédito</string>
    <string name="save_product">Guardar Producto</string>
    <string name="delete_product">Eliminar Producto</string>
    <string name="create_category">Crear Categoria</string>
    <string name="delete_category">Eliminar Categoria</string>
    <string name="update_cart">Actualizar Carrito</string>
    <string name="edit_category">Editar Categoria</string>
    <string name="unassigned_color">#000000</string>
    <string name="choose_color">Seleccione un color</string>
    <string name="category_color_description">Este color se aplicará a todos los articulos de esta categoria que no tengan un color o imagen configurados</string>
    <string name="delete_category_message">Al eliminar esta categoria, los productos asociados a está no serán eliminados</string>

    <string name="toolbar_image_title">Tap para seleccionar</string>
    <string name="assigned_products">Productos a asignar</string>
    <string name="search_in">Buscar en</string>
    <string name="cart">Carrito</string>
    <string name="charge_verb">Cobrar</string>
    <string name="voucher_hint">Código de Voucher</string>
    <string name="new_order">Nueva Orden</string>

    <string name="voucher_info">Por favor introduzca el código del voucher.\nEsta información vinculará esta orden con la transacción</string>
    <string name="select_payment_method">Seleccione Método de Pago</string>
    <string name="get_receipt">¿Le gustaria recibir su recibo?</string>
    <string name="cash_data">Total: ${total}\nMonto: ${cash}</string>
    <string name="return_text">Cambio: ${change}</string>

    <string name="thanks">¡Gracias por su compra!</string>

    <string name="email_subject">Recibo de Compra</string>

    <string name="printer_name">Nombre de Impresora</string>
    <string name="register_printers">Impresoras Registradas</string>
    <string name="choose_device">Escoga el dispositivo</string>
    <string name="printer_info">Agrega una nueva impresora para que sea posible imprimir los recibos de compras</string>

    <string name="title_no_paired_devices">No hay dispositivos Bluetooth disponibles</string>
    <string name="title_select_bluetooth_device">Seleccione la impresora Bluetooth</string>
    <string name="not_file_permission_granted">Esta aplicación necesita permisos para funcionar correctamente</string>
    <string name="printers">Impresoras</string>

    <string name="logout">Cerrar Sesión</string>
    <string name="logout_questions">¿Está seguro que desea cerrar sesión?</string>
    <string name="total">Total</string>
    <string name="amount">Monto</string>
    <string name="change">Cambio</string>
    <string name="voucher">Voucher</string>

    <string name="no_products_data">No hay products registrados</string>

    <string-array name="paper_width">
        <item>58 mm</item>
        <item>80 mm</item>
    </string-array>

</resources>
