<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sales"
            android:title="@string/sales"
            android:icon="@drawable/ic_checkout"/>
        <item
            android:id="@+id/transactions"
            android:title="@string/transactions"
            android:icon="@drawable/ic_transactions"/>
        <item
            android:id="@+id/items"
            android:title="@string/items"
            android:icon="@drawable/ic_list"/>
        <item
            android:id="@+id/reports"
            android:title="@string/reports"
            android:icon="@drawable/ic_reports"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/support"
            android:title="@string/support"
            android:icon="@drawable/ic_support"/>
    </group>


</menu>
